//
// File: lclusterpb.proto
//
// Description: prototype for remote process calls
//

syntax = "proto3";

package lclusterpb;

service Lclusterd {
    rpc StartJob (StartJobRequest) returns (StartJobResponse) {} 
    rpc CheckJob (CheckJobRequest) returns (CheckJobResponse) {}
    rpc StopJob (StopJobRequest) returns (StopJobResponse) {}
}

//
// StartJobRequest definition
//
message StartJobRequest {

    // Description
    string description   = 1;

    // Shell, binary, and env
    string path          = 2;
    repeated string args = 3;
    repeated string env  = 4;

    // Hostname
    string hostname      = 5;

    // Process id, assigned as per Lclusterd
    int64 pid            = 6;
}

//
// StartJobResponse definition
//
message StartJobResponse {

    // Process id, can be -1 if an error occurs
    int64 pid    = 1;

    // Error message as a string, if any
    string error = 2;
}

//
// CheckJobRequest definition
//
message CheckJobRequest {

    // Process id of the job intending to check
    int64 pid = 1;
}

//
// CheckJobResponse definition
//
message CheckJobResponse {

    // Response code, as int64
    //
    // -1 --> failure, due to corrupted server or input
    //  0 --> unknown job status
    //  1 --> process does not exist
    //  2 --> process is queued
    //  3 --> process is active on a node
    //
    int64 rc = 1;

    // Error message as a string, if any
    string error = 2;
}

//
// StopJobRequest definition
//
message StopJobRequest {

    // Process id of the job intending to stop
    int64 pid = 1;
}

//
// StopJobResponse definition
//
message StopJobResponse {

    // Response code, as int64
    //
    // -1 --> failure, due to corrupted server or input
    //  0 --> success
    //  1 --> process does not exist
    //
    int64 rc = 1;

    // Error message as a string, if any
    string error = 2;
}
